[project]
name = "cnquant-dependencies"
version = "0.3.0"
description = "This repository contains the dependencies shared by more than one of the CnQuant applications"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy>=1.26.4",
    "pytest>=8.4.2",
]
license = "MIT"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cnquant_dependencies*"]
exclude = []